# 20th_intern_kimminjo

./: README.md
C++&Qt/day1/hw1/hw1/: CMakeLists.txt
C++&Qt/day1/hw1/hw1/src/: main.cpp
C++&Qt/day1/hw1/hw1_package/: CMakeLists.txt
C++&Qt/day1/hw1/hw1_package/include/: hw1.hpp
C++&Qt/day1/hw2/hw2/: CMakeLists.txt
C++&Qt/day1/hw2/hw2/src/: main.cpp
C++&Qt/day1/hw2/hw2_package/: CMakeLists.txt
C++&Qt/day1/hw3/hw3/: CMakeLists.txt
C++&Qt/day1/hw3/hw3/src/: main.cpp
C++&Qt/day1/hw3/hw3_package/: CMakeLists.txt
C++&Qt/day2/hw2/hw2_package/: CMakeLists.txt
OpenCV/day1/hw1/hw1_package/: CMakeLists.txt  package.xml
OpenCV/day1/hw1/hw1_package/src/: my_cpp_node.cpp
OpenCV/day1/hw1/my_first_ros_rclcpp_pkg/: CMakeLists.txt  package.xml
OpenCV/day1/hw2/hw2_package/: package.xml  setup.cfg  setup.py
OpenCV/day1/hw2/hw2_package/hw2_package/: client.py  server.py
OpenCV/day1/hw2/my_first_ros_rclpy_pkg/: package.xml  setup.py
OpenCV/day1/hw2/my_first_ros_rclpy_pkg/my_first_ros_rclpy_pkg/: client.py  server.py
OpenCV/day2/hw1/: hw1.docx
ROS2/day1/hw2/hw2_package/hw2_cpp_package/: CMakeLists.txt  package.xml
ROS2/day1/hw2/hw2_package/hw2_py_package/: package.xml  setup.cfg  setup.py
ROS2/day2/hw1/custom_interfaces/: CMakeLists.txt  package.xml
ROS2/day2/hw1/hw1_package/: CMakeLists.txt  package.xml
ROS2/day2/hw1/hw1_package/src/: publisher.cpp  subscriber.cpp
ROS2/day4/hw1/hw1_package/: CMakeLists.txt  package.xml
